--- a/student-home.html
+++ b/student-home.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Learn with Nipun</title>
-    <link rel="stylesheet" href="https://sasankpandrakula.github.io/learn-withp-Nipun/style.css">
+    <link rel="stylesheet" href="https://sasankpandrakula.github.io/learn-with-Nipun/style.css">
     <style>
         body {
         /* Using the background image as requested */
-        background-image: url('https://sasankpandrakula.github.io/learn-withp-Nipun/background_image.png');
+        background-image: url('https://sasankpandrakula.github.io/learn-with-Nipun/background_image.png');
         background-size: cover;
         background-attachment: fixed;
         background-position: center;
@@ -38,9 +38,9 @@
         </div>
 
         <nav>
-            <a href="student-home.html" class="active">Home</a>
-            <a href="student-courses.html">Courses</a>
-            <a href="student-mycourses.html">MyCourses</a>
+            <a href="https://sasankpandrakula.github.io/learn-with-Nipun/student-home.html" class="active">Home</a>
+            <a href="https://sasankpandrakula.github.io/learn-with-Nipun/student-courses.html">Courses</a>
+            <a href="https://sasankpandrakula.github.io/learn-with-Nipun/student-mycourses.html">MyCourses</a>
             <a href="#">Assignments</a>
             <a href="#">Schedules</a>
             <a href="#">Notes</a>
@@ -193,4 +193,5 @@
 </script>
 
 </body>
+
 </html>
