--- a/student-home.html
+++ b/student-home.html
@@ -22,7 +22,7 @@
     <header>
         <div class="top-bar">
             <div class="logo-container">
-                <img src="images/Logo.png" alt="Learn with Nipun Logo" class="logo-img">
+                <img src="https://sasankpandrakula.github.io/learn-with-Nipun/Logo.png" alt="Learn with Nipun Logo" class="logo-img">
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="Search...">
@@ -195,3 +195,4 @@
 </body>
 
 </html>
+
