--- a/teacher-login.html
+++ b/teacher-login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Teacher Login</title>
-    <link rel="stylesheet" href="https://github.com/SasankPandrakula/learn-with-Nipun/style.css">
+    <link rel="stylesheet" href="https://sasankpandrakula.github.io/learn-with-Nipun/style.css">
 </head>
 <body>
 
@@ -21,6 +21,7 @@
 
 </body>
 </html>
+
 
 
 
