--- a/student-login.html
+++ b/student-login.html
@@ -12,7 +12,7 @@
     <input type="email" placeholder="Email">
     <input type="password" placeholder="Password">
 
-    <a href="https://github.com/SasankPandrakula.github.io/learn-with-Nipun/student-home.html"><button class="btn">Login</button></a>
+    <a href="https://sasankpandrakula.github.io/learn-with-Nipun/student-home.html"><button class="btn">Login</button></a>
 
     <p>Not yet registered?
         <a href="https://sasankpandrakula.github.io/learn-with-Nipun/student-signup.html">Sign up</a>
@@ -21,6 +21,7 @@
 
 </body>
 </html>
+
 
 
 
