--- a/teacher-signup.html
+++ b/teacher-signup.html
@@ -19,7 +19,7 @@
     <input type="password" placeholder="Password">
     <input type="password" placeholder="Confirm Password">
 
-    <button class="btn">Submit</button>
+    <a href="https://sasankpandrakula.github.io/learn-with-Nipun/teacher-login.html"><button class="btn">Submit</button></a>
 
     <p>Already registered?
         <a href="https://sasankpandrakula.github.io/learn-with-Nipun/teacher-login.html">Login</a>
@@ -28,4 +28,5 @@
 
 </body>
 </html>
+
 
